[gd_scene load_steps=71 format=2]

[ext_resource path="res://sprites/AnimaçãoPersonagem/Parado/Parado0.png" type="Texture" id=1]
[ext_resource path="res://scripts/charBehavior.gd" type="Script" id=2]
[ext_resource path="res://scripts/Spawner.gd" type="Script" id=3]
[ext_resource path="res://sprites/clown car.png" type="Texture" id=4]
[ext_resource path="res://sprites/backGround.png" type="Texture" id=5]
[ext_resource path="res://sprites/backGroundFrente.png" type="Texture" id=6]
[ext_resource path="res://sprites/satchel.png" type="Texture" id=7]
[ext_resource path="res://sprites/satchel1.png" type="Texture" id=8]
[ext_resource path="res://sprites/satchel2.png" type="Texture" id=9]
[ext_resource path="res://scripts/satchel.gd" type="Script" id=10]
[ext_resource path="res://sprites/ArteBau4.png" type="Texture" id=11]
[ext_resource path="res://sprites/ArteBau2.png" type="Texture" id=12]
[ext_resource path="res://sprites/ArteBau3.png" type="Texture" id=13]
[ext_resource path="res://sprites/ArteBau0.png" type="Texture" id=14]
[ext_resource path="res://sprites/ArteBau1.png" type="Texture" id=15]
[ext_resource path="res://scripts/Chest.gd" type="Script" id=16]
[ext_resource path="res://scripts/rootManager.gd" type="Script" id=17]
[ext_resource path="res://sprites/bandeira/1.png" type="Texture" id=18]
[ext_resource path="res://scripts/Bandeira.gd" type="Script" id=19]
[ext_resource path="res://sprites/toolBoxG.png" type="Texture" id=20]
[ext_resource path="res://sprites/toolBoxW.png" type="Texture" id=21]
[ext_resource path="res://scripts/toolbox.gd" type="Script" id=22]
[ext_resource path="res://sprites/BoxG.png" type="Texture" id=23]
[ext_resource path="res://sprites/BoxW.png" type="Texture" id=24]
[ext_resource path="res://scripts/gunpowder.gd" type="Script" id=25]
[ext_resource path="res://sprites/bandeira/2.png" type="Texture" id=26]
[ext_resource path="res://sprites/bandeira/3.png" type="Texture" id=27]
[ext_resource path="res://sprites/bandeira/0.png" type="Texture" id=28]
[ext_resource path="res://boat damage.wav" type="AudioStream" id=29]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=30]
[ext_resource path="res://sprites/WorkbenchG.png" type="Texture" id=31]
[ext_resource path="res://sprites/WorkbenchW.png" type="Texture" id=32]
[ext_resource path="res://scripts/speedUpgrade.gd" type="Script" id=33]
[ext_resource path="res://sprites/BarrelW.png" type="Texture" id=34]
[ext_resource path="res://sprites/BarrelG.png" type="Texture" id=35]
[ext_resource path="res://scripts/cannonUpgrade.gd" type="Script" id=36]
[ext_resource path="res://clown horn - sound effect.wav" type="AudioStream" id=37]
[ext_resource path="res://sprites/BaseCanhaoFrente.png" type="Texture" id=38]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Parado/Parado1.png" type="Texture" id=39]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Parado/Parado2.png" type="Texture" id=40]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Parado/Parado3.png" type="Texture" id=41]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Esquerda/Esquerda0.png" type="Texture" id=42]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Esquerda/Esquerda2.png" type="Texture" id=43]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Direita/Direita0.png" type="Texture" id=44]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Direita/Direita3.png" type="Texture" id=45]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Esquerda/Esquerda3.png" type="Texture" id=46]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Esquerda/Esquerda1.png" type="Texture" id=47]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Direita/Direita1.png" type="Texture" id=48]
[ext_resource path="res://sprites/AnimaçãoPersonagem/Direita/Direita2.png" type="Texture" id=49]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 45 ) ],
"loop": true,
"name": "direita",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 47 ), ExtResource( 43 ), ExtResource( 46 ) ],
"loop": true,
"name": "esquerda",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.1813, 15.9184 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.4349, 53.2925 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 38.0386, 66.6965 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 512.192, 20.4486 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 13.8672, 11.5252 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 13.7633, 14.0017 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 21.0149, 97.6284 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 509.738, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 10, 108.245 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 510.381, 10 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 17 )

[node name="Pirate" type="KinematicBody2D" parent="."]
light_mask = 7
position = Vector2( 33, 466.596 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
collision_layer = 4129
collision_mask = 4129
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pirate"]
light_mask = 7
frames = SubResource( 1 )
animation = "parado"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pirate"]
visible = false
light_mask = 4096
position = Vector2( 0, 5.597 )
scale = Vector2( 2, 3.49 )
shape = SubResource( 2 )

[node name="Pirata2D" type="Position2D" parent="Pirate"]
position = Vector2( 0, -50 )

[node name="Area2D" type="Area2D" parent="Pirate"]
visible = false
collision_layer = 36
collision_mask = 36

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Pirate/Area2D"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Area2D_2" type="Area2D" parent="Pirate"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pirate/Area2D_2"]
visible = false
shape = SubResource( 3 )

[node name="Satchel" type="Area2D" parent="Pirate"]
position = Vector2( 13.999, 23.759 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Pirate/Satchel"]
visible = false
position = Vector2( -4.91098, -8.59418 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pirate/Satchel"]
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 4 )
animation = "0"
playing = true

[node name="Chest" type="Area2D" parent="Pirate"]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Pirate/Chest"]
visible = false
position = Vector2( 1.11182, 3.45145 )
shape = SubResource( 3 )

[node name="Spawner" type="KinematicBody2D" parent="."]
light_mask = 7
position = Vector2( 33, 100 )
z_index = 1
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Spawner"]
position = Vector2( 0.793335, -30.1469 )
scale = Vector2( 0.0829611, 0.0768624 )
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawner"]
position = Vector2( 0, -100 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Spawner"]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Spawner/Area2D"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Inimigo2D" type="Position2D" parent="Spawner"]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Spawner"]
stream = ExtResource( 37 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 513.314, 298.188 )
scale = Vector2( 1.2758, 0.992914 )
z_index = -3
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 512.266, 301.271 )
scale = Vector2( 1.28664, 0.991302 )
z_index = 1
texture = ExtResource( 6 )

[node name="Bau" type="Area2D" parent="."]
position = Vector2( 965.81, 490.082 )
collision_layer = 1024
collision_mask = 1024
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bau"]
visible = false
position = Vector2( -50.8048, 7.7108 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bau"]
position = Vector2( 15.5427, 7.37009 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 7 )
animation = "0"

[node name="Colisão Palhaço" type="Area2D" parent="."]
position = Vector2( 0.333385, 557.431 )
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisão Palhaço"]
position = Vector2( 513.384, 21.0182 )
shape = SubResource( 8 )

[node name="BandeiraHP" type="Area2D" parent="."]
position = Vector2( 882.597, 73 )
collision_layer = 262144
collision_mask = 262144
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BandeiraHP"]
frames = SubResource( 9 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BandeiraHP"]
visible = false
position = Vector2( -62, 0 )
shape = SubResource( 10 )

[node name="ToolBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolBox"]
visible = false
position = Vector2( 726.323, 401.135 )
shape = SubResource( 11 )

[node name="toolboxSprite" type="AnimatedSprite" parent="ToolBox"]
position = Vector2( 722.527, 409.395 )
scale = Vector2( 1.87667, 1.8142 )
frames = SubResource( 12 )
animation = "2"

[node name="Gunpowder" type="Area2D" parent="."]
position = Vector2( 348, 421.542 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gunpowder"]
visible = false
position = Vector2( 4, -29 )
shape = SubResource( 13 )

[node name="gunpowderSprite" type="AnimatedSprite" parent="Gunpowder"]
position = Vector2( 3.87708, -7.75412 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 14 )
animation = "1"

[node name="speedUpgrade" type="Area2D" parent="."]
position = Vector2( 172, 431 )
scale = Vector2( 1.2, 1.2 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="speedUpgrade"]
visible = false
position = Vector2( 4, -29 )
shape = SubResource( 13 )

[node name="speedSprite" type="AnimatedSprite" parent="speedUpgrade"]
position = Vector2( 3.87708, -7.75412 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 15 )
animation = "1"

[node name="cannonUpgrade" type="Area2D" parent="."]
position = Vector2( 544, 431 )
scale = Vector2( 1.2, 1.2 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cannonUpgrade"]
visible = false
position = Vector2( 4, -29 )
shape = SubResource( 13 )

[node name="cannonSprite" type="AnimatedSprite" parent="cannonUpgrade"]
position = Vector2( 3.87708, -7.75412 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 16 )
animation = "1"

[node name="leftBound" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -65.6175, 420.362 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBound"]
visible = false
position = Vector2( 43.0615, 84.0724 )
shape = SubResource( 17 )

[node name="bottomBound" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 505.389, 571.984 )
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottomBound"]
visible = false
shape = SubResource( 18 )

[node name="rightBound" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 1064.79, 492.497 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBound"]
visible = false
position = Vector2( -95.6342, -6.46176 )
shape = SubResource( 19 )

[node name="upperBound" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 491.278, 356.038 )
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="upperBound"]
position = Vector2( 17.7285, 12.1884 )
shape = SubResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )

[node name="cannonMiddle" parent="." instance=ExtResource( 30 )]
position = Vector2( 500, 484.298 )

[node name="cannonLeft" parent="." instance=ExtResource( 30 )]
position = Vector2( 200, 484.298 )

[node name="cannonRight" parent="." instance=ExtResource( 30 )]
position = Vector2( 800, 484.298 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 498.844, 490.805 )
scale = Vector2( 1.47798, 1.35849 )
frames = SubResource( 21 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 197.101, 490.703 )
scale = Vector2( 1.47798, 1.35849 )
frames = SubResource( 21 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 798.539, 491.522 )
scale = Vector2( 1.47798, 1.35849 )
frames = SubResource( 21 )
[connection signal="area_entered" from="Pirate/Area2D_2" to="Pirate" method="_on_Area2D_2_area_entered"]
[connection signal="area_entered" from="Pirate/Satchel" to="Pirate" method="_on_Satchel_area_entered"]
[connection signal="area_entered" from="Pirate/Chest" to="." method="_on_Chest_area_entered"]
[connection signal="area_entered" from="Pirate/Chest" to="Pirate" method="_on_Chest_area_entered"]
[connection signal="area_entered" from="Colisão Palhaço" to="." method="_on_Coliso_Palhao_area_entered"]
[connection signal="area_entered" from="ToolBox" to="." method="_on_ToolBox_area_entered"]
[connection signal="area_entered" from="Gunpowder" to="." method="_on_Gunpowder_area_entered"]
[connection signal="area_entered" from="speedUpgrade" to="." method="_on_speedUpgrade_area_entered"]
[connection signal="area_entered" from="cannonUpgrade" to="." method="_on_cannonUpgrade_area_entered"]
